tests/transpiler/x/fs/group_by_multi_sort.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(6,5): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(11,5): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(34,44): error FS0010: Unexpected keyword 'val' in expression. Expected '}' or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(34,26): error FS0604: Unmatched '{'

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(36,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(36,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,17): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,17): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,85): error FS0599: Missing qualification after '.'

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,86): error FS0010: Unexpected keyword 'val' in expression. Expected incomplete structured construct at or before this point or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_sort.fs(37,58): error FS3106: Unexpected end of input in 'for' expression. Expected 'for <pat> in <expr> do <expr>'.
